bar chart component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<a class="navbar-brand" href="#">
+<a class="navbar-brand" [routerLink]="['']">
   <span class="logo logo-left">Dnl</span>
   <span class="logo logo-right">App</span>
 </a>
